working with various connection pool data source objects

--- a/SpringBootCore/bootIOCProject04-LayeredApp-RealTimeDI-WorkingWithBothOracle&MySqlDB/src/main/resources/application.properties
+++ b/SpringBootCore/bootIOCProject04-LayeredApp-RealTimeDI-WorkingWithBothOracle&MySqlDB/src/main/resources/application.properties
@@ -2,6 +2,8 @@ spring.application.name=bootIOCProject03-LayeredApp-RealTimeDI-MiniProject
 
 dao.id=MySqlEmpDao
 
+#spring.datasource.type=org.apache.commons.dbcp2.BasicDataSource
+
 ##oracle
 #spring.datasource.driver-class-name=oracle.jdbc.driver.OracleDriver
 #spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
