--- a/SpringBootCore/bootIOCProject04-LayeredApp-RealTimeDI-WorkingWithBothOracle&MySqlDB/pom.xml
+++ b/SpringBootCore/bootIOCProject04-LayeredApp-RealTimeDI-WorkingWithBothOracle&MySqlDB/pom.xml
@@ -34,23 +34,29 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
-			<exclusions>
+			<!--<exclusions>
 				<exclusion>
 					<groupId>com.zaxxer</groupId>
 					<artifactId>HikariCP</artifactId>
 				</exclusion>
-			</exclusions>
+			</exclusions>-->
 		</dependency>
-		<!--<dependency>
+	<!--working with various data source objects-->
+	<!--	<dependency>
 			<groupId>org.apache.tomcat</groupId>
 			<artifactId>tomcat-jdbc</artifactId>
 			<version>11.0.6</version>
 		</dependency>-->
-		<dependency>
+	<!--	<dependency>
 			<groupId>org.apache.commons</groupId>
 			<artifactId>commons-dbcp2</artifactId>
 			<version>2.13.0</version>
-		</dependency>
+		</dependency>-->
+	<!--	<dependency>
+			<groupId>com.mchange</groupId>
+			<artifactId>c3p0</artifactId>
+			<version>0.10.2</version>
+		</dependency>-->
 		<!--<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ucp</artifactId>
