--- a/SpringBootCore/bootIOCProject08-MiniProject-Profiles/src/main/resources/application.properties
+++ b/SpringBootCore/bootIOCProject08-MiniProject-Profiles/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.application.name=bootIOCProject04-MiniProject
+spring.name=bootIOCProject09-MiniProject
 
-spring.profiles.include=prod
 
+spring.profiles.include=uat
