--- a/SpringBootCore/bootIOCProject08-MiniProject-Profiles/pom.xml
+++ b/SpringBootCore/bootIOCProject08-MiniProject-Profiles/pom.xml
@@ -34,12 +34,6 @@
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-jdbc</artifactId>
-			<!--<exclusions>
-				<exclusion>
-					<groupId>com.zaxxer</groupId>
-					<artifactId>HikariCP</artifactId>
-				</exclusion>
-			</exclusions>-->
 		</dependency>
 		<!--working with various data source objects-->
 		<dependency>
@@ -60,13 +54,15 @@
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ucp</artifactId>
-			<version>23.7.0.25.01</version>
+			<version>21.3.0.0</version>
 		</dependency>
 		<dependency>
 			<groupId>com.oracle.database.jdbc</groupId>
 			<artifactId>ojdbc11</artifactId>
+			<version>21.3.0.0</version> <!-- ✅ Add this -->
 			<scope>runtime</scope>
 		</dependency>
+
 		<dependency>
 			<groupId>com.mysql</groupId>
 			<artifactId>mysql-connector-j</artifactId>
