--- a/SpringBootDataJpa/bootDataJpaProject08-WorkingWithLOBs/src/main/resources/application.properties
+++ b/SpringBootDataJpa/bootDataJpaProject08-WorkingWithLOBs/src/main/resources/application.properties
@@ -3,7 +3,7 @@ spring.application.name=bootDataJpaProject08-WorkingWithLOBs
 spring.datasource.url=jdbc:oracle:thin:@localhost:1521:xe
 spring.datasource.username=dinesh
 spring.datasource.password=dinesh9999
-spring.datasource.driver.class-name=oracle.jdbc.OracleDriver
+spring.datasource.driver.class-name=oracle.jdbc.driver.OracleDriver
 spring.jpa.database-platform=org.hibernate.dialect.OracleDialect
 
 spring.jpa.hibernate.ddl-auto=update
