--- a/SpringBootMVC/bootMVCProject01-FirstApp/src/main/resources/application.properties
+++ b/SpringBootMVC/bootMVCProject01-FirstApp/src/main/resources/application.properties
@@ -1,7 +1,8 @@
 spring.application.name=bootMVCProject01-FirstApp
 
+server.port=4041
 
 spring.mvc.view.prefix=/WEB-INF/pages/
 spring.mvc.view.suffix=.jsp
 
-server.port=4041
+server.servlet.context-path=/Firstapp
