--- a/SpringBootRest/bootRestProject03-RestAPI-SendingJSONData/pom.xml
+++ b/SpringBootRest/bootRestProject03-RestAPI-SendingJSONData/pom.xml
@@ -9,11 +9,11 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>nit</groupId>
-	<artifactId>bootRestProjecto1-RestAPI</artifactId>
+	<artifactId>bootRestProject03-RestAPI-SendingJSONData</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>war</packaging>
-	<name>bootRestProjecto1-RestAPI</name>
-	<description>Spring boot data Rest API</description>
+	<name>bootRestProject03-RestAPI-SendingJSONData</name>
+	<description>Spring boot Rest</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -28,7 +28,7 @@
 		<url/>
 	</scm>
 	<properties>
-		<java.version>21</java.version>
+		<java.version>17</java.version>
 	</properties>
 	<dependencies>
 		<dependency>
