--- a/SpringBootCloud-Microservices/bootMSProject08-BillingMS-Provider-Actuators/src/main/resources/application.properties
+++ b/SpringBootCloud-Microservices/bootMSProject08-BillingMS-Provider-Actuators/src/main/resources/application.properties
@@ -32,3 +32,5 @@ info.app.createdby=dinesh
 org.nit.name=dinesh
 org.nit.addrs=hyderabad
 org.nit.pincode=534005
+
+spring.boot.admin.client.url=http://localhost:9091
