--- a/SpringBootCloud-Microservices/bootMSProject08-CartMS-Consumer-LBC-Actuators/src/main/resources/application.properties
+++ b/SpringBootCloud-Microservices/bootMSProject08-CartMS-Consumer-LBC-Actuators/src/main/resources/application.properties
@@ -21,3 +21,5 @@ info.app.name=cartms
 info.app.size=11
 info.app.vender=m
 info.app.createdby=dinesh
+
+spring.boot.admin.client.url=http://localhost:9091
